# phybkc

./: .gitignore  Cargo.toml  LICENSE  README.md  all_check.txt  check.txt  config.toml  daemon_check.txt  daemon_error.txt  daemon_error_2.txt  daemon_error_3.txt  design.md  gui_check.txt  profileA.json
crates/daemon/: Cargo.toml  build.rs
crates/daemon/src/: evaluator.rs  hook.rs  keyboard.rs  main.rs  simulator.rs  state.rs  tray.rs
crates/dsl/: Cargo.toml
crates/dsl/src/: ast.rs  executor.rs  lib.rs  parser.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  hook.rs  main.rs
crates/gui/src/views/: mappings.rs  mod.rs  profiles.rs  scripts.rs
crates/profile/: Cargo.toml
crates/profile/src/: key_map.rs  lib.rs
docs/: usage.md
memo/: 2026-02-04_22-32.md  2026-02-05_00-36.md  howtobuild.md  memo_0.md  progress_20260203.md  progress_20260205.md
profiles/: Colemak.json  dvorak.json  qwerty.json
sample/: config.toml  profileA.json  profileB.json  scriptA.phybkc
scripts/: bundle.ps1  test_win.phybkc
