[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
profile = { path = "../profile" }
windows-sys = { version = "0.59", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
tokio = { version = "1.49", features = ["full"] }