[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
profile = { path = "../profile" }
dsl = { path = "../dsl" }
windows-sys = { version = "0.59", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
tokio = { version = "1.49", features = ["full"] }
async-trait = "0.1"
tray-icon = "0.19"
image = "0.25"

[build-dependencies]
winres = "0.1"