[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[dependencies]
profile = { path = "../profile" }
eframe = "0.33.3"
egui = "0.33.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
windows-sys = { version = "0.59", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_Foundation"] }